--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
             <li style="z-index: 2;"><img src="img/s5.png" alt=""/></li>
             <!-- <li style="z-index: 1;"><img src="img/s1.jpg" alt=""/></li> -->
         </ul>
+        <div class="box1">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
         <div class="wx-banner-nav">
             <div class="wx-banner-nav-1">
                 <ul>
@@ -437,7 +445,7 @@
         <div class="wx-conent-4">
             <div class="wx-conent-4-top">热卖专区</div>
             <div class="wx-conent-4-bottom">
-                <ul>
+                <ul class="remai">
                     <li class="wx-conent-4-bottom1 ha1">
                         <div  class="wx-conent-4-bottom1-top">
                             <div class="on active"><img src="img/c1.png" alt=""></div>
@@ -554,19 +562,74 @@
                 </ul>
             </div>
         </div>
+        <div class="wx-conent-5">
+            <h2>精品手机</h2>
+            <div class="wx-conent-5-con">
+               <div class="wx-conent-5-con-1"><img src="img/d1.png" alt=""></div>
+               <div class="wx-conent-5-con-2">
+                    <ul class="wx-conent-5-con-3">
+                            <!-- <li class="onon active">
+                                <div  class="wx-conent-4-bottom1-top">
+                                     <div class="on active"><img src="img/d2.png" alt=""></div>
+                                 </div>
+                                 <p class="wx-conent-4-bottom1-2">
+                                     <span >3色可选</span>
+                                 </p>
+                                 <p >
+                                 <span >限时直降</span> 
+                                 <span class="on">
+                                     <ul class="yuanxing1 on">
+                                         <li></li>
+                                         <li></li>
+                                         <li></li>
+                                         <li></li>
+                                         <li></li>
+                                     </ul>
+                                 </span>
+                                 </p>
+                                 <p class="wx-conent-4-bottom1-3">
+                                     <span>￥2900.6</span>
+                                 </p>
+                             </li>
+                              -->
+                        </ul>
+                        <ul class="wx-conent-5-con-4"></ul>
+                        <ul class="wx-conent-5-con-5"></ul>
+                        <ul class="wx-conent-5-con-6"></ul>
+                        <ul class="wx-conent-5-con-7"></ul>
+                        <ul class="wx-conent-5-con-8"></ul>
+                      
+               </div>
+               <div class="wx-conent-5-con-2"></div>
+            </div>
+        </div>
+        <div class="wx-conent-6">
+            <h1>精品配件</h1>
+            <div class="wx-conent-6-right">
+                <ul>
+                    <li>充电</li>
+                    <li>配件</li>
+                    <li>音乐</li>
+                    <li>更多</li>
+                </ul>
+            </div>
+            <div class="wx-conent-6-box">
+                <ul>
+                    <li>
+                        <a href="">
+                            <div><img src="img/d2.png" alt=""></div>
+                            <p >灰白色</p>
+                            <p >正品保障 </p>
+                            <p >￥2900.6</p> 
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
     </div>
-    <div class="wx-bottom"></div>
+    <!-- <div class="wx-bottom"></div> -->
     <div class="wx-slide">
-        <!-- <div class="wx-slide-con1">
-                <p class="wx-slide-off">购物车</p>
-                <p class="wx-slide-off">客服</p>
-                <p class="wx-slide-off">帮助中心</p>
-                <p class="wx-slide-off">回到顶部</p>
-                <p >购物车</p>
-                <p >客服</p>
-                <p >帮助中心</p>
-                <p >回到顶部</p>
-        </div> -->
         <ul class="wx-slide-con2">
             <li><p class="wx-slide-off">购物车</p><span>1</span></li>
             <li><p class="wx-slide-off">客服</p><span>2</span></li>
@@ -580,6 +643,8 @@
 
     <script src="js/jquery-1.8.3.js"></script>
     <!-- <script src="js/animate9.0.js"></script> -->
+    <!-- <script src="js/ajax.js"></script> -->
+
     <script src="js/index.js"></script>
 </body>
 </html>
