--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>vivo</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/iconfont.css">
 </head>
 <body>
     <div class="wx-top">
         <div class="wx-top-left">
             <ul>
-               <li><a href="javascript:;">品牌</a></li>
+               <li><a href="javascript:;">品牌</span></a></li>
                <li><a href="javascript:;">Funtouch OS</a></li>
                <li><a href="javascript:;">体验店</a></li>
                <li><a href="javascript:;">政企业务</a></li>
@@ -208,7 +209,6 @@
             <li style="z-index: 4;"><img src="img/s3.png" alt=""/></li>
             <li style="z-index: 3;"><img src="img/s4.png" alt=""/></li>
             <li style="z-index: 2;"><img src="img/s5.png" alt=""/></li>
-            <!-- <li style="z-index: 1;"><img src="img/s1.jpg" alt=""/></li> -->
         </ul>
         <div class="box1">
             <span></span>
@@ -394,41 +394,45 @@
             <p><a href="javascript:;">更多场次</a></p>
         </div>
         <div class="wx-conent-3">
-            <div class="wx-conent-3-left">left</div>
-            <div class="wx-conent-3-right">right</div>
+            <div class="wx-conent-3-left">
+                <span class='iconfont icon-return'>
+            </div>
+            <div class="wx-conent-3-right">
+                <span class='iconfont icon-jiantou1' ></span>
+            </div>
             <div class="wx-conent-3-on">
             <ul>
-                <li><img src="img/a1.png" alt="">
+                <li><a href="javascript:;"><img src="img/a1.png" alt=""></a>
                     <p>iQOO     羽光白1</p>
                     <p>加价一元抢购</p>
                     <p>￥1500</p>
                     <p>￥1800</p>
                 </li>
-                <li><img src="img/a1.png" alt="">
+                <li><a href="javascript:;"><img src="img/a2.jpg" alt=""></a>
                     <p>iQOO     羽光白2</p>
                     <p>加价一元抢购</p>
                     <p>￥1500</p>
                     <p>￥1800</p>
                 </li>
-                <li><img src="img/a1.png" alt="">
+                <li><a href="javascript:;"><img src="img/a3.jpg" alt=""></a>
                     <p>iQOO     羽光白3</p>
                     <p>加价一元抢购</p>
                     <p>￥1500</p>
                     <p>￥1800</p>
                 </li>
-                <li><img src="img/a1.png" alt="">
+                <li><a href="javascript:;"><img src="img/a4.png" alt=""></a>
                     <p>iQOO     羽光白4</p>
                     <p>加价一元抢购</p>
                     <p>￥1500</p>
                     <p>￥1800</p>
                 </li>
-                <li><img src="img/a1.png" alt="">
+                <li><a href="javascript:;"><img src="img/a5.jpg" alt=""></a>
                     <p>iQOO     羽光白5</p>
                     <p>加价一元抢购</p>
                     <p>￥1500</p>
                     <p>￥1800</p>
                 </li>
-                <li><img src="img/a1.png" alt="">
+                <li><a href="javascript:;"><img src="img/a6.png" alt=""></a>
                     <p>iQOO     羽光白6</p>
                     <p>加价一元抢购</p>
                     <p>￥1500</p>
@@ -486,8 +490,8 @@
 
                     <li class="wx-conent-4-bottom1 ha2">
                         <div  class="wx-conent-4-bottom1-top">
-                            <div class="on active"><img src="img/c1.png" alt=""></div>
-                            <div class="on"><img src="img/c2.png" alt=""></div>
+                            <div class="on active"><img src="img/c2.png" alt=""></div>
+                            <div class="on"><img src="img/c1.png" alt=""></div>
                             <div class="on"><img src="img/c3.png" alt=""></div>
                             <div class="on"><img src="img/c4.png" alt=""></div>
                             <div class="on"><img src="img/c5.png" alt=""></div>
@@ -524,9 +528,9 @@
 
                     <li class="wx-conent-4-bottom1 ha3">
                         <div  class="wx-conent-4-bottom1-top">
-                            <div class="on active"><img src="img/c1.png" alt=""></div>
+                            <div class="on active"><img src="img/c3.png" alt=""></div>
                             <div class="on"><img src="img/c2.png" alt=""></div>
-                            <div class="on"><img src="img/c3.png" alt=""></div>
+                            <div class="on"><img src="img/c1.png" alt=""></div>
                             <div class="on"><img src="img/c4.png" alt=""></div>
                             <div class="on"><img src="img/c5.png" alt=""></div>
                         </div>
@@ -610,7 +614,7 @@
                     <li>充电</li>
                     <li>配件</li>
                     <li>音乐</li>
-                    <li>更多</li>
+                    <li><a href="">更多</a></li>
                 </ul>
             </div>
             <div class="wx-conent-6-box">
@@ -629,7 +633,7 @@
 
     </div>
     <!-- <div class="wx-bottom"></div> -->
-    <div class="wx-slide">
+    <!-- <div class="wx-slide">
         <ul class="wx-slide-con2">
             <li><p class="wx-slide-off">购物车</p><span>1</span></li>
             <li><p class="wx-slide-off">客服</p><span>2</span></li>
@@ -637,11 +641,12 @@
            <li ><p class="wx-slide-off ">回到顶部</p><span>4</span></li>
         </ul>
        
-    </div>
+    </div> -->
 
 
 
     <script src="js/jquery-1.8.3.js"></script>
+    <script src="js/iconfont.js"></script>
     <!-- <script src="js/animate9.0.js"></script> -->
     <!-- <script src="js/ajax.js"></script> -->
 
